Finish log in/log out

--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -1,3 +1,4 @@
-# Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
-
-#empty
+emma:
+  name: Emma Example
+  email: emma@example.com
+  password_digest: <%= User.digest('password') %>
